--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -234,6 +234,16 @@ fieldset {
   width: 275px;
 }
 
+.setup-card-title {
+  font-size: 0.9em;
+  color: mediumblue;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 6px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
 .setup-search-box {
   border-radius: 999px;
   padding-top: 4px;
@@ -242,6 +252,7 @@ fieldset {
   padding-right: 12px;
   font-size: 0.8em;
   margin-bottom: 8px;
+  margin-top: 6px;
   width: 225px;
 }
 
