--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -48,6 +48,10 @@ h2 {
   box-shadow: 0px 0px 20px mediumblue;
 }
 
+fieldset {
+  border-style: none;
+}
+
 /* navlist begins */
 
 nav {
@@ -130,10 +134,10 @@ nav ul li a {
 
 /* content section starts */
 .content {
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 30px;
+  padding-left: 50px;
+  padding-right: 50px;
   flex: 1;
 }
 
@@ -164,6 +168,17 @@ nav ul li a {
   margin: 32px;
 }
 
+/* setup utils */
+
+.setup-radio-form-option {
+  margin: 6px;
+  padding: 6px;
+}
+
+.radio-button-label {
+  font-weight: 600;
+}
+
 /* setup */
 
 #excercise-start-button {
@@ -174,60 +189,72 @@ nav ul li a {
   margin: 12px;
 }
 
-.setup-header {
-  color: mediumblue;
+#excercise-setup-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#content-excercise-setup {
-  text-align: center;
+.excercise-setup-header {
+  color: mediumblue;
+  font-size: 1.8rem;
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 
 .setup-type {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-.setup-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-fieldset {
-  border-style: none;
-}
-
-.setup-set-div {
-  display: flex;
-  flex-direction: column;
-  margin-top: 16px;
-  margin-bottom: 32px;
-  margin-left: 32px;
-  margin-right: 32px;
-}
-
-.setup-radio-form {
-  display: flex;
-  flex-direction: column;
+  padding: 8px;
+  margin-top: 8px;
   margin-bottom: 4px;
 }
 
-.setup-radio-form-option {
-  margin: 8px;
+.setup-div {
+  width: 100%;
+  text-align: center;
+  max-width: 850px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.radio-button-label {
-  font-weight: 600;
+.main-setup-field-set {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4px;
+  margin-bottom: 32px;
+  margin-left: 12px;
+  margin-right: 12px;
+  padding-top: 0px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.setup-all-some {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .setup-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: white;
   border-radius: 24px;
-  margin: 4px;
+  margin: 8px;
   padding: 16px;
   height: 325px;
   width: 275px;
+}
+
+.setup-card.setup-card-error {
+  box-shadow: 0px 0px 20px red;
 }
 
 .setup-card-title {
@@ -240,8 +267,9 @@ fieldset {
   margin-right: 8px;
 }
 
-.setup-search-box {
+.setup-card-search-box {
   border-radius: 999px;
+  border-color: black;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-left: 12px;
@@ -252,27 +280,65 @@ fieldset {
   width: 225px;
 }
 
-.setup-items-list {
-  display: block;
-  margin-bottom: 8px;
-  margin-left: 0px;
-  margin-right: 0px;
+.setup-card-error-title {
+  font-size: 0.7em;
+  color: red;
+  font-weight: 500;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.setup-card-delete-selected {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+  text-align: left;
+  width: 100%;
+  color: mediumblue;
+  font-size: 0.7em;
+  background-color: white;
+  border-style: none;
+}
+
+.setup-card-items-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-top: 0px;
+  margin-bottom: 0px;
   overflow-y: scroll;
-  max-height: 270px;
-  border-radius: 12px;
+  max-height: 210px;
   padding: 8px;
 }
 
-.setup-row {
-  display: flex;
-  flex-direction: row;
+.setup-card-items-list.setup-card-items-list-error {
+  max-height: 178px;
 }
 
-.setup-item {
+.setup-card-item-row {
+  display: flex;
+  flex-direction: row;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.setup-card-item {
   margin: 8px;
   text-align: left;
   font-weight: 500;
   font-size: 0.8em;
+  overflow-wrap: break-word;
+}
+
+.fa-solid.fa-arrow-down {
+  position: absolute;
+  top: 85%; /* adjust as needed */
+  left: 50%; /* adjust as needed */
+  z-index: 1;
 }
 
 /* excercise */
@@ -375,6 +441,30 @@ footer {
   margin: 8px;
   font-weight: 400;
   font-size: 1rem;
+}
+
+@media (max-width: 830px) {
+  #excercise-setup-form {
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .setup-type {
+    margin: 0px;
+  }
+
+  .setup-div {
+    flex-direction: column;
+  }
+
+  .main-setup-field-set {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
 
 @media (max-width: 650px) {
