--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -41,7 +41,7 @@ h2 {
 .blue-glow-button {
   background-color: mediumblue;
   color: white;
-  font-size: 1.2em;
+  font-size: 1.5rem;
   font-weight: 700;
   border-style: none;
   border-radius: 999px;
@@ -77,7 +77,7 @@ nav {
 nav ul li a {
   text-decoration: none;
   color: mediumblue;
-  font-size: 1em;
+  font-size: 1.3rem;
 }
 
 .nav-logo-div {
@@ -126,7 +126,7 @@ nav ul li a {
 .overlay-menu-item a {
   color: mediumblue;
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -171,6 +171,7 @@ nav ul li a {
 /* setup utils */
 
 .setup-radio-form-option {
+  font-size: 1.2rem;
   margin: 6px;
   padding: 6px;
 }
@@ -181,14 +182,6 @@ nav ul li a {
 
 /* setup */
 
-#excercise-start-button {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 12px;
-}
-
 #excercise-setup-form {
   display: flex;
   flex-direction: column;
@@ -196,6 +189,7 @@ nav ul li a {
 }
 
 .excercise-setup-header {
+  text-align: center;
   color: mediumblue;
   font-size: 1.8rem;
   margin-top: 0px;
@@ -215,6 +209,7 @@ nav ul li a {
   width: 100%;
   text-align: center;
   max-width: 850px;
+  min-width: 230px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -258,7 +253,7 @@ nav ul li a {
 }
 
 .setup-card-title {
-  font-size: 0.9em;
+  font-size: 1.2rem;
   color: mediumblue;
   font-weight: 600;
   margin-top: 0px;
@@ -274,14 +269,14 @@ nav ul li a {
   padding-bottom: 4px;
   padding-left: 12px;
   padding-right: 12px;
-  font-size: 0.8em;
+  font-size: 1rem;
   margin-bottom: 8px;
   margin-top: 6px;
-  width: 225px;
+  width: 80%;
 }
 
 .setup-card-error-title {
-  font-size: 0.7em;
+  font-size: 0.9rem;
   color: red;
   font-weight: 500;
   margin-top: 6px;
@@ -298,7 +293,7 @@ nav ul li a {
   text-align: left;
   width: 100%;
   color: mediumblue;
-  font-size: 0.7em;
+  font-size: 0.9rem;
   background-color: white;
   border-style: none;
 }
@@ -330,7 +325,7 @@ nav ul li a {
   margin: 8px;
   text-align: left;
   font-weight: 500;
-  font-size: 0.8em;
+  font-size: 1rem;
   overflow-wrap: break-word;
 }
 
@@ -341,8 +336,61 @@ nav ul li a {
   z-index: 1;
 }
 
+#excercise-start-button {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 12px;
+}
+
 /* excercise */
 #content-excercise {
+  text-align: center;
+}
+
+#no-compounds {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.no-compounds-header {
+  color: mediumblue;
+  text-align: center;
+}
+
+.no-compounds-text {
+  text-align: center;
+  overflow-wrap: break-word;
+}
+
+#no-compounds-button {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 12px;
+}
+
+#excercise-error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.excercise-error-header {
+  color: mediumblue;
+  text-align: center;
+}
+
+.excercise-error-text {
+  text-align: center;
+  overflow-wrap: break-word;
+}
+
+.trying-to-reconnect {
+  color: mediumblue;
   text-align: center;
 }
 
@@ -465,16 +513,18 @@ footer {
     margin-left: 0px;
     margin-right: 0px;
   }
+
+  #excercise-start-button {
+    margin: 4px;
+  }
 }
 
 @media (max-width: 650px) {
-  html {
-    font-size: 14px;
-  }
   .content {
-    margin-left: 30px;
-    margin-right: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
+
   .nav-list {
     justify-content: space-between;
   }
@@ -502,6 +552,26 @@ footer {
     padding-left: 20px;
     padding-right: 20px;
     margin: 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 350px) {
+  #excercise-setup-form {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+  .setup-card {
+    width: 90%;
+  }
+
+  #no-compounds-button {
+    margin: 8px;
   }
 }
 
