--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -152,7 +152,7 @@ nav ul li a {
 
 /* home */
 
-#home-div {
+#home {
   text-align: center;
 }
 
@@ -356,7 +356,7 @@ nav ul li a {
 }
 
 /* excercise */
-#content-excercise {
+#excercise {
   text-align: center;
 }
 
@@ -405,13 +405,22 @@ nav ul li a {
   text-align: center;
 }
 
+.task-label {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: 16px;
+}
+
 .task {
-  font-size: 35px;
-  margin: 30px;
+  font-size: 2.5rem;
+  margin-top: 16px;
+  margin-bottom: 30px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .excercise-entry {
-  font-size: 30px;
+  font-size: 2rem;
   border-radius: 999px;
   padding-left: 20px;
   padding-top: 7.5px;
@@ -474,7 +483,7 @@ nav ul li a {
 }
 
 /* about style */
-#content-about {
+#about {
   margin-top: 0px;
 }
 .about-card {
