--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -13,9 +13,8 @@
     <script src="https://kit.fontawesome.com/e4425be16c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="main">
-      <div id="app"></div>
+    <div id="root">
     </div>
-    <script src="{% static "frontend/main.js" %}"></script>
   </body>
+  <script src="{% static "frontend/main.js" %}"></script>
 </html>
