--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% load static %} 
-    <link rel="icon" type="image/x-icon" href="{%  static 'images/nazvoslovi_logo.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{%  static 'images/nazvoslovi_icon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
