--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -435,6 +435,7 @@ nav ul li a {
   padding-right: 20px;
   padding-top: 7.5px;
   padding-bottom: 7.5px;
+  line-height: 1.5;
   margin: 30px;
   width: 85%;
   max-width: 700px;
