--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -418,6 +418,7 @@ nav ul li a {
   font-size: 1.2rem;
   font-weight: 600;
   margin: 16px;
+  text-align: center;
 }
 
 .task {
@@ -426,6 +427,7 @@ nav ul li a {
   margin-bottom: 30px;
   margin-left: 8px;
   margin-right: 8px;
+  text-align: center;
 }
 
 .excercise-entry {
