--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -25,7 +25,9 @@ input[type="radio"] {
 #root {
   position: fixed;
   width: 100%;
+  min-width: 100%;
   height: 100%;
+  min-height: 100%;
   left: 0;
   top: 0;
   min-width: 270px;
@@ -134,7 +136,7 @@ nav ul li a {
 .content {
   z-index: 0;
   margin-top: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding-left: 50px;
   padding-right: 50px;
   flex: 1;
@@ -267,6 +269,7 @@ nav ul li a {
 .setup-card-search-box {
   border-radius: 999px;
   border-color: black;
+  border-style: solid;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-left: 12px;
@@ -275,6 +278,10 @@ nav ul li a {
   margin-bottom: 8px;
   margin-top: 4px;
   width: 80%;
+}
+
+.setup-card-search-box:disabled {
+  border-color: grey;
 }
 
 .setup-card-error-title {
@@ -547,6 +554,8 @@ nav ul li a {
 /* footer style */
 
 footer {
+  margin-top: auto;
+  width: 100%;
   z-index: 0;
   text-align: center;
   padding: 8px;
