--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -555,7 +555,7 @@ nav ul li a {
 
 footer {
   margin-top: auto;
-  width: 100%;
+  width: auto;
   z-index: 0;
   text-align: center;
   padding: 8px;
